--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -10,7 +10,7 @@
         <div class="card-panel">
             <div class="valign-wrapper">
                 <div class="valign center" style="width: 100%;">
-                    <img class="circle z-depth-1 white" src="/images/question.png" style="top: -50px; position: relative; margin:-25px;">
+                    <img class="circle z-depth-1 white question-add-header-img" src="/images/logos/question-square.png">
                 </div>
             </div>
             <div class="row">
