--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -162,6 +162,11 @@
                                 <span class="card-title center-align">Recommended Timing</span>
                                 <div class="row"></div>
                                 <div class="row">
+                                    <div class="col s12 red-text">
+                                        SAMPLE CONTENT FOR TESTING
+                                    </div>
+                                </div>
+                                <div class="row">
                                     <div class="col s12">
                                         <div id="test-slider"></div>
                                     </div>
