--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -3,15 +3,14 @@
         <nav class="white z-depth-0">
 
             <a href="#" class="brand-logo right grey-text darken-4">
-                <img class="hide-on-small-only" src="/images/logos/logo.svg">
-                <!--<i class="material-icons">exit_to_app</i> logout-->
+                <img class="hide-on-large-only hide-on-extra-large-only hide-on-small-and-down" src="/images/logos/logo.svg">
             </a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-            </ul>
             <a href="#" data-target="slide-out"
                class="sidenav-trigger"><i class="material-icons teal-text lighten-2">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a class="black-text">Logout</a></li>
+            </ul>
+
         </nav>
     </div>
 
@@ -40,8 +39,9 @@
         <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Teacher Resources<span class="new badge">4</span></a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect waves-light btn red" href="/logout"><!--<i class="material-icons">exit_to_app</i>-->Logout</a></li>
-        <li><div class="divider"></div></li>
+        <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only hide-on-small-and-down" href="/logout"><!--<i
+        class="material-icons">exit_to_app</i>-->Logout</a></li>
+        <li><div class="divider hide-on-large-only hide-on-extra-large-only hide-on-small-and-down"></div></li>
 
         <li>
             <div class="app-download-links">
