--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -3,12 +3,17 @@
     <a class="breadcrumb">My Profile</a>
 </div>
 
-<h1>Your Profile</h1>
-<table>
-  {{#each user}}
-  <tr>
-    <th>{{@key}}</th>
-    <td>{{this}}</td>
-  </tr>
-  {{/each}}
-</table>
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel">
+            <table>
+                {{#each user}}
+                    <tr>
+                        <th>{{@key}}</th>
+                        <td>{{this}}</td>
+                    </tr>
+                {{/each}}
+            </table>
+        </div>
+    </div>
+</div>
