--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -6,34 +6,70 @@
     {{/if}}
 </div>
 
-{{#if question}}
-<h1>{{question.text}}</h1>
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel question-card">
 
-<a href="/questions/{{question.id}}/favorite">Favorite this question</a> |
-<a href="/questions/{{question.id}}/copy">Copy this question</a>
-
-{{else}}
-    <br><br><br>
-    <div class="row">
-        <div class="col s12 m6 offset-m3">
-            <div class="card-panel">
-                <div class="row center-align">
-                    <h4>Whoops!</h4>
+            {{#if question}}
+                <h3>{{question.text}}</h3>
+                <hr>
+                <div class="row hide-on-med-and-up">
+                    <div class="col s12 right-align">
+                        <a href="/questions/{{question.id}}/favorite" class="waves-effect waves-light btn">
+                            <i class="material-icons left">favorite</i>
+                            Favorite
+                        </a>
+                        <a href="/questions/{{question.id}}/copy" class="waves-effect waves-light btn">
+                            <i class="material-icons left">assignment</i>
+                            Create Lesson
+                        </a>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col m12 l10 offset-l1">
+                    <div class="col s12">
+                        <div class="chip">
+                            Tag 1
+                        </div>
+                    </div>
+                </div>
+            {{else}}
+                <br><br><br>
+                <div class="row">
+                    <div class="col s12 m6 offset-m3">
+                        <div class="card-panel">
+                            <div class="row center-align">
+                                <h4>Whoops!</h4>
+                            </div>
+                            <div class="row">
+                                <div class="col m12 l10 offset-l1">
                         <span>Looks like there is no question here with that ID.  Try searching for your next great
                         SOLE question by clicking the button below:
                         </span>
+                                </div>
+                            </div>
+                            <div class="row center-align">
+                                <a class="waves-effect waves-light btn">Explore Questions</a>
+                            </div>
+
+                        </div>
                     </div>
-                </div>
-                <div class="row center-align">
-                    <a class="waves-effect waves-light btn">Explore Questions</a>
+
                 </div>
 
-            </div>
+            {{/if}}
+
         </div>
-
+        <div class="action-buttons-header hide-on-small-only">
+            <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
+               data-position="bottom"
+               data-tooltip="Favorite Question">
+                <i class="material-icons">favorite</i>
+            </a>
+            <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
+               data-position="bottom"
+               data-tooltip="Create Lesson Plan">
+                <i class="material-icons">assignment</i>
+            </a>
+        </div>
     </div>
-
-{{/if}}
+</div>
