--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -3,6 +3,47 @@
     <a class="breadcrumb">Resources</a>
 </div>
 
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel">
+            <div class="row">
+                <div class="col m12 l10">
+                    <div class="row">
+                        <div class="col s12 m6 l4">
+                            <div class="card horizontal">
+                                <div class="card-image">
+                                    <img src="images/resources/communication_skills_matte_black.png">
+                                </div>
+                                <div class="card-stacked">
+                                    <div class="card-content">
+                                        <p>I am a very simple card. I am good at containing small bits of information.</p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="#">This is a link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col hide-on-med-and-down l2">
+                    <div id="pushpin-wrapper" style="max-width:140px;">
+                        <img src="images/logos/sole-graphic-logo-small.png">
+                        <ul class="pushpin-item section table-of-contents">
+                            <li><a href="#overview">Resources</a></li>
+                            <li><a href="#bigQuestion">Troubleshooting</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
 <!-- Gallery -->
 <div id="portfolio" class="section gray">
     <div class="container">
