wip login updates

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,6 +15,7 @@
                         <i class="material-icons prefix">email</i>
                         <input id="email" type="email" name="email" class="validate">
                         <label for="email">Email</label>
+                        <span class="helper-text" data-error="invalid email"></span>
                     </div>
                 </div>
                 <div class="row">
