--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -24,7 +24,7 @@
                            type="text"
                            class="validate"
                            required
-                           value="{{sole.question.text}}">
+                           value="{{sole.question.question.text}}">
                     <label for="question">What is your big question?</label>
                 </div>
                 <!--planned date-->
