--- a/views/soles-single.hbs
+++ b/views/soles-single.hbs
@@ -4,19 +4,24 @@
     <a class="truncate truncate-question breadcrumb">{{sole.question.question.text}}</a>
 </div>
 
+<div class="row">
+    <div class="col s12">
+        <div class="card-panel">
+            {{#if sole}}
+                <h3>{{sole.question.question.text}}</h3>
+                <table class="striped responsive-table">
+                    {{#each sole}}
+                        <tr>
+                            <th>{{@key}}</th>
+                            <td>{{this}}</td>
+                        </tr>
+                    {{/each}}
 
-{{#if sole}}
+                </table>
+            {{else}}
+                <h2>No SOLE found with that ID</h2>
+            {{/if}}
+        </div>
+    </div>
+</div>
 
-<h3>Data from your SOLE session</h3>
-<table class="striped responsive-table">
-  {{#each sole}}
-  <tr>
-    <th>{{@key}}</th>
-    <td>{{this}}</td>
-  </tr>
-  {{/each}}
-
-</table>
-{{else}}
-  <h2>No SOLE found with that ID</h2>
-{{/if}}
