--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -10,8 +10,9 @@
 </main>
 
 {{> footer}}
-<script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
 <script type="text/javascript" src="/js/sole-config.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="/js/login.js"></script>
 
 </body>
