--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
                     <div id="google-sign-in" google-sign-in></div>
                 </div>
             </div>
-            <form action="/login" method="post">
+            <form id="login-form" action="/login" method="get">
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">email</i>
@@ -27,12 +27,12 @@
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <div class="red-text" id="error">{{ Login.form.error }}</div>
+                        <div class="red-text" id="error"></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12 center">
-                        <button type="submit" class="signin-db btn red waves-effect waves-light" id="login">Log In</button>
+                        <button type="submit" class="signin-db btn red waves-effect waves-light" id="login" onclick="function (e){e.preventDefault()}">Log In</button>
                     </div>
                 </div>
                 <div class="row">
@@ -75,3 +75,6 @@
         </a>
     </div>
 </div>
+<form id="foobar" action="/login" method="get">
+  <input type="hidden" name="sessionToken" id="sessionToken" value="">
+</form>
