--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -399,7 +399,7 @@
                 </div>
 
                 <div class="row">
-                    <input type="submit" class="waves-effect waves-light btn">
+                    <input type="submit" value="Save" class="waves-effect waves-light btn">
                 </div>
 
 
