--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -14,14 +14,23 @@
                             <a class="active" href="#planned">Planned{{#if planned}} ({{planned.length}}){{/if}}</a>
                         </li>
                         <li class="tab col s4 {{#unless reflect}}disabled{{/unless}}">
-                            <a href="#reflect" {{#unless reflect}}onclick="M.toast({html: 'No SOLEs awaiting ' +
-                             'reflection'})"{{/unless}}>
+                            <a href="#reflect" {{#unless reflect}}
+                               onclick="M.toast({
+                               html: 'No SOLEs awaiting reflection',
+                               displayLength: 3000
+                               })"
+                            {{/unless}}>
                                 Reflect{{#if reflect}} ({{reflect.length}}){{/if}}
                             </a>
                         </li>
                         <li class="tab col s4 {{#unless completed}}disabled{{/unless}}">
-                            <a href="#completed" {{#unless completed}}onclick="M.toast({html: 'No SOLEs completed...yet'})"{{/unless}}>
-                                Completed{{#if completed}}({{completed.length}}){{/if}}
+                            <a href="#completed" {{#unless completed}}
+                               onclick="M.toast({
+                               html: 'No SOLEs completed... yet',
+                               displayLength: 3000
+                               })"
+                            {{/unless}}>
+                                Completed{{#if completed}} ({{completed.length}}){{/if}}
                             </a>
                         </li>
                     </ul>
