its called code because its confusing. others peoples lives are more interesting

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
         <div class="card-panel">
             <div class="row">
                 <div class="col s12 l6 center">
-                    <img src="/images/facebook-login-button.png" onmouseover="this.src='/images/facebook-login-button-hover.png'" onmouseout="this.src='/images/facebook-login-button.png'"  facebook-sign-in />
+                    <img src="/images/facebook-login-button.png" id="fb-login" onmouseover="this.src='/images/facebook-login-button-hover.png'" onmouseout="this.src='/images/facebook-login-button.png'"  />
                 </div>
                 <div class="col s12 l6 center">
                     <div id="google-sign-in" google-sign-in></div>
