--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
 <script type="text/javascript" src="/js/sole-config.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script id="facebook-jssdk" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10"></script>
 <script type="text/javascript" src="/js/login.js"></script>
 
 </body>
